<resources>
    <string name="app_name">Vaibhav Traders GST</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="countries">Countries</string>
    <string name="customers">Customers</string>
    <string name="delivery_modes">Delivery Modes</string>
    <string name="products">Products</string>
    <string name="states">States</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="tables">Tables</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>